# iniconfig

./: Makefile  README.md  dune-project  iniconfig.opam
test/: dune  run_tests.ml
