opam-version: "2.0"
maintainer: "riandouglas@gmail.com"
authors: ["Rian Douglas"]
homepage: "https://github.com/rmdouglas/iniconfig"
bug-reports: "https://github.com/rmdouglas/iniconfig/issues"
dev-repo: "https://github.com/rmdouglas/iniconfig.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: ["dune" "runtest" "-p" name]

depends: [
  "dune" {build}
  "alcotest" {test}
]
